# PromptShell

./: .env.example  .gitignore  README.md  build-llama.bat  build.sh  install.ps1  install.sh
backend/: CMakeLists.txt  test.cpp
backend/include/: assistant_mode.h  coderunner.h  llm_engine.h  promptshell.h
backend/src/: coderunner.cpp  llm_engine.cpp  main.cpp  promptshell.cpp
docs/: PHASE1-complete.md  PHASE2-complete.md  PHASE3-complete.md  phase2-side-by-side-guide.md  procedure.md  setup.md
scripts/: install.ps1  install.sh
temp_slides/: 01-title.html  02-why-required.html  03-flowchart.html  04-cpp-oop.html  05-differentiator.html  06-thanks.html
